tests/baselines/reference/parserParameterList4.errors.txt
//// [tests/cases/conformance/parser/ecmascript5/ParameterLists/parserParameterList4.ts] ////

parserParameterList4.ts(1,12): error TS2369: A parameter property is only allowed in a constructor implementation.


==== parserParameterList4.ts (1 errors) ====
    function F(public A) {
               ~~~~~~~~
!!! error TS2369: A parameter property is only allowed in a constructor implementation.
    }